[package]
name = "smile"
version = "0.1.0"
authors = ["Davide Galassi <davxy@datawok.net>"]
description = "Crypto library in Rust"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
